Browser can now be restarted without having to call quit()

--- a/notebooks/Browser Session.ipynb
+++ b/notebooks/Browser Session.ipynb
@@ -34,9 +34,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now, work with `browser`, `nav`, etc. to hack on CFME, interactively.\n",
-      "\n",
-      "Remember to call `browser.quit()` when done."
+      "Now, work with `browser`, `nav`, etc. to hack on CFME, interactively."
      ]
     },
     {
