add provider setup call comments to notebook

--- a/notebooks/Browser Session.ipynb
+++ b/notebooks/Browser Session.ipynb
@@ -22,8 +22,18 @@
      "input": [
       "from fixtures import navigation as nav\n",
       "from utils.browser import start, testsetup\n",
+      "from utils import providers\n",
       "browser = start()\n",
-      "dashboard_page = nav.home_page_logged_in(testsetup)"
+      "dashboard_page = nav.home_page_logged_in(testsetup)\n",
+      "\n",
+      "# ADD SINGLE PROVIDER\n",
+      "# providers.setup_provider(provider_yaml_key)\n",
+      "\n",
+      "# ADD ALL INFRA PROVIDERS\n",
+      "# providers.setup_infrastructure_providers(validate=False, check_existing=False)\n",
+      "\n",
+      "# ADD ALL CLOUD PROVIDERS\n",
+      "# providers.setup_cloud_providers(validate=False, check_existing=False)\n"
      ],
      "language": "python",
      "metadata": {},
