add base_url override to notebook

--- a/notebooks/Browser Session.ipynb
+++ b/notebooks/Browser Session.ipynb
@@ -23,6 +23,7 @@
       "from fixtures import navigation as nav\n",
       "from utils.browser import start, testsetup\n",
       "from utils import providers\n",
+      "# conf.env['base_url'] = 'http://1.1.1.1'\n",
       "browser = start()\n",
       "dashboard_page = nav.home_page_logged_in(testsetup)\n",
       "\n",
