fixes for browser session notebook

--- a/notebooks/Browser Session.ipynb
+++ b/notebooks/Browser Session.ipynb
@@ -20,12 +20,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from fixtures import navigation as nav\n",
-      "from utils.browser import start, testsetup\n",
-      "from utils import providers\n",
-      "# conf.env['base_url'] = 'http://1.1.1.1'\n",
-      "browser = start()\n",
-      "dashboard_page = nav.home_page_logged_in(testsetup)\n",
+      "import cfme.fixtures.pytest_selenium as sel\n",
+      "from utils import providers, version, conf\n",
+      "from cfme.configure import configuration \n",
+      "# conf.env['base_url'] = 'http://10.8.59.157'\n",
+      "sel.force_navigate('dashboard')\n",
+      "\n",
       "\n",
       "# ADD SINGLE PROVIDER\n",
       "# providers.setup_provider(provider_yaml_key)\n",
