--- a/notebooks/BasicApplianceSetup.ipynb
+++ b/notebooks/BasicApplianceSetup.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "app0_ip.appliance_console.run_commands(command_set)\n",
     "app0_ip.evmserverd.wait_for_running()\n",
-    "app0_ip.wait_for_web_ui()\n"
+    "app0_ip.wait_for_miq_ready()\n"
    ]
   },
   {
@@ -93,7 +93,7 @@
     "\n",
     "app1_ip.appliance_console.run_commands(command_set)\n",
     "app1_ip.evmserverd.wait_for_running()\n",
-    "app1_ip.wait_for_web_ui()"
+    "app1_ip.wait_for_miq_ready()"
    ]
   },
   {
@@ -117,7 +117,7 @@
     "\n",
     "app1_ip.appliance_console.run_commands(command_set_0)\n",
     "app1_ip.evmserverd.wait_for_running()\n",
-    "app1_ip.wait_for_web_ui()\n"
+    "app1_ip.wait_for_miq_ready()\n"
    ]
   },
   {
